--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,9 @@
 @import "tailwindcss";
 
-/* Set your global sans family */
 @theme {
   --font-sans: "Inter", ui-sans-serif, system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Apple Color Emoji", "Segoe UI Emoji",
     "Segoe UI Symbol";
-}
-
-/* (Optional) If you want a code font everywhere code appears */
-@theme {
-  --font-mono: "JetBrains Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
+  --color-primary: #e95135;
+  --color-secondary: #fef4e1;
+  --color-primary-2: #de8165;
 }
